--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "homepage": "https://github.com/rodrigohenriques/lio-fidelidade-backend#readme",
   "dependencies": {
+    "cool-ascii-faces": "1.3.3",
     "express": "~4.0.0",
-    "mongoose": "~3.6.13",
+    "pg": "4.x",
     "body-parser": "~1.0.1"
   }
 }
