--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend do projeto",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "test"
   },
   "repository": {
@@ -17,9 +18,9 @@
   },
   "homepage": "https://github.com/rodrigohenriques/lio-fidelidade-backend#readme",
   "dependencies": {
-    "cool-ascii-faces": "1.3.3",
+    "body-parser": "~1.0.1",
     "express": "~4.0.0",
-    "pg": "4.x",
-    "body-parser": "~1.0.1"
+    "mongoose": "~3.6.13",
+    "pug": "^2.0.0-beta6"
   }
 }
