--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
+    "node-uuid": "^1.4.7",
     "pug": "^2.0.0-beta6"
   }
 }
