--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "~4.0.0",
     "mongoose": "~4.1.11",
     "node-uuid": "^1.4.7",
-    "pug": "^2.0.0-beta6"
+    "pug": "^2.0.0-beta6",
+    "request": "^2.75.0"
   }
 }
